# basic

3dViewer_v.1.0/: Doxyfile  README.md  glview.cpp  glview.hpp  glview.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  parser.c  parser.h  parser_aux.c  s21_3dViewer.pro  s21_3dViewer.pro.user.35a3e3b  transform.c  transform.h
3dViewer_v.1.0/front/: glView.cpp  main.cpp  mainwindow.hpp  mainwindow.ui  settings.cpp  settings.h
3dViewer_v.1.0/parser/: parser.h
3dViewer_v.1.0/tests/: parser_test.c  transform_test.c
3dViewer_v.1.0/transform/: transform.c
C projects/: README.md
C projects/3dViewer_v.1.0/: Makefile
C projects/3dViewer_v.1.0/front/: glView.hpp  (+2 more)
C projects/math/: README.md  s21_abs.c  s21_asin.c  s21_exp.c  s21_fabs.c  s21_floor.c  s21_fmod.c  s21_pow.c  s21_sqrt.c  s21_tan.c
C projects/simbash/: README.md
CPP projects/Containers/: Makefile  man.md  s21_containers.h  s21_containers.hpp  s21_containersplus.h  sample.cpp  test.cpp
CPP projects/FileParser/: CMakeLists.txt  README.md  README_RUS.md  main.cpp
CPP projects/FileParser/file_processor/: file_processor.cpp  file_processor.h
CPP projects/FileParser/resources/: appView.qml  resources.qrc
CPP projects/FileParser/test/: largeEng.md  smallRUS.txt  testRus.txt
CPP projects/FileParser/word_count_model/: word_count_model.cpp  word_count_model.h
CPP projects/Matrix/: Makefile  debug.cpp  readme.md
CPP projects/registration/: header.h  main.cpp  myApp.pro  myClass.cpp
DevOps/SimpleDocker/: README.md  report.md
SQL/: day03+04.sql  sql_folders.sh
SimpleBashUtils/cat/: Makefile  a.out  cat_lib.c  cat_lib.h  s21_cat.c
Web/Order_map/: Roboto-Regular-normal.js  index.html  main.html  uv_2024 NEW.xlsx
Web/ubego/: CMakeLists.txt  main.cpp  run.sh  sentry_logger.cpp  sentry_logger.h
Web/ubego/sentry-native/install/lib/cmake/sentry/: sentry-config-version.cmake  sentry-config.cmake  sentry-targets-relwithdebinfo.cmake  sentry-targets.cmake
build-s21_3dViewer-Desktop-Debug/: Makefile  moc_glview.cpp  moc_mainwindow.cpp  s21_3dViewer  ui_glview.h  ui_mainwindow.h
calc_v.1.0/src/: #smartcalc.glade#  Makefile  aux.c  calc.c  calc.h  calculation.c  check.md  credit.c  display.c  example.c  graph.c  info.tex  main.c  parser.c  readme.md  smartcalc.glade  smartcalc.glade~  test.c  validation.c
decimal/src/: Makefile  division_manual.txt  example.c  main.c  s21_additional.c  s21_arithmetic.c  s21_aux.c  s21_bitwise.c  s21_comparison.c  s21_converters.c  s21_decimal.h
linux_network/src/: report.md
math/: Makefile  s21_acos.c  s21_atan.c  s21_cos.c  s21_log.c  s21_math.h  s21_normalize.c  s21_sin.c
math/unit_tests/: s21_test_abs.c  s21_test_asin.c  s21_test_ceil.c  s21_test_fabs.c  s21_test_sin.c
matrix/src/: Makefile  check.txt  s21_aux.c  s21_math.c  s21_structure.c
simbash/cat/: cat_lib.h
string/: Makefile  main.c  s21_insert.c  s21_itoa.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_memmove.c  s21_memset.c  s21_sprintf.c  s21_strcat.c  s21_strchr.c  s21_strcmp.c  s21_strcpy.c  s21_strcspn.c  s21_strerror.c  s21_strerror.h  s21_string.h  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strncpy.c  s21_strpbrk.c  s21_strrchr.c  s21_strspn.c  s21_strstr.c  s21_strtok.c  s21_trim.c  test  test.c  test.check
string/src/: s21_atoi.c  s21_memchr.c  s21_memcmp.c  s21_strcpy.c  s21_strerror.c  s21_strerror.h  s21_strncmp.c  s21_strspn.c  s21_strtok.c  s21_to_lower.c  s21_to_upper.c
string/stringfunc/: memchr.c
task/math/: Makefile  s21_abs.c  s21_ceil.c  s21_fabs.c  s21_floor.c  s21_fmod.c  s21_math.h
(+304 files in other folders)
